Adjusting tests.